--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                           </div>
                           <!-- item 2 -->
                           <div class="specs_item">
-                            <h6 class="specName">Discipline</h6>
+                            <h6 class="specName">Discipline is always good</h6>
                             <div class="progress">
                               <div class="progress-bar" style="width:90%"></div>
                             </div>
@@ -218,6 +218,34 @@
                             </div>
                           </div>
                           <!-- item 2 -->
+                          <div class="specs_item">
+                            <h6 class="specName">Inspiration</h6>
+                            <div class="progress">
+                              <div class="progress-bar" style="width:50%"></div>
+                            </div>
+                          </div>
+						                            <!-- item 2 -->
+                          <div class="specs_item">
+                            <h6 class="specName">Inspiration</h6>
+                            <div class="progress">
+                              <div class="progress-bar" style="width:50%"></div>
+                            </div>
+                          </div>
+						                            <!-- item 2 -->
+                          <div class="specs_item">
+                            <h6 class="specName">Inspiration</h6>
+                            <div class="progress">
+                              <div class="progress-bar" style="width:50%"></div>
+                            </div>
+                          </div>
+						                            <!-- item 2 -->
+                          <div class="specs_item">
+                            <h6 class="specName">Inspiration</h6>
+                            <div class="progress">
+                              <div class="progress-bar" style="width:50%"></div>
+                            </div>
+                          </div>
+						                            <!-- item 2 -->
                           <div class="specs_item">
                             <h6 class="specName">Inspiration</h6>
                             <div class="progress">
