--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <a href="./add_tag.html" style="position: absolute; left: 5%; color: white; cursor: pointer">
       <span><i class="fa fa-angle-left" aria-hidden="true"></i></span>
     </a>
-    <h4>Record</h4>
+    <h4>Records</h4>
   </nav>
   <!-- page header ending -->
   <div class="backdrop "></div>
   <div class="pop-up-delete">
-    <img class="del-icon-pop" src="../assets/images/delpopup.png" alt="">
+    <img class="del-icon-pop" src="../assets/images/cross_icon.svg" alt="">
     <img class="pop-icon" src="../assets/images/popIcon.png" alt="">
     <h3 class="text-center text-bold">Are you sure?</h3>
     <p class="pop-descp">Lorem ipsum dolor sit amet consectetur</p>
@@ -45,6 +45,7 @@
 
   <!-- banner start -->
   <section class="banner">
+
     <div class="container">
       <select class="form-select" aria-label="Default select example">
         <option selected>Last 15 Days</option>
@@ -96,34 +97,46 @@
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingOne">
             <!-- date & time info -->
-            <button class="accordion-button " type="button" data-bs-toggle="collapse"  data-bs-target="#recordOne" aria-expanded="false" aria-controls="recordOne">
+            <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#recordOne"
+              aria-expanded="false" aria-controls="recordOne">
               <div class="dateTime_wrapp">
                 <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span><d class="date">Jan, 2021</div>
+                <div class="date_wrapp"><span class="bold-text">14</span>
+                  <d class="date">Jan, 2021
+                </div>
                 <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
               </div>
             </button>
 
             <!-- record cta -->
             <div class="record-cta">
-              <span class="dropdown">
+              <div class="dropdown">
                 <span class="dropdown-toggle dots_wrapp" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   <i class="fa-solid fa-ellipsis-vertical"></i>
-                  <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
-                    <li> <a class="dropdown-item dropdown-delete-item" href="#"><img src="assets/images/001-trash.png"
-                          alt="img" class="img-fluid" /> Delete </a>
-                    </li>
-                    <li><a class="dropdown-item" href="#"><img src="assets/images/002-edit.png" alt="img"
-                          class="img-fluid" /> Edit </a>
-                    </li>
-                  </ul>
                 </span>
-              </span>
+                <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
+                  <li> <a class="dropdown-item dropdown-delete-item" href="#">
+                      <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M5.6 2.56098H8.4C8.4 2.17285 8.2525 1.80063 7.98995 1.52619C7.7274 1.25174 7.3713 1.09756 7 1.09756C6.6287 1.09756 6.2726 1.25174 6.01005 1.52619C5.7475 1.80063 5.6 2.17285 5.6 2.56098ZM4.55 2.56098C4.55 2.22466 4.61337 1.89164 4.7365 1.58093C4.85962 1.27022 5.04008 0.987901 5.26759 0.750092C5.49509 0.512284 5.76518 0.323644 6.06243 0.194943C6.35967 0.0662416 6.67826 0 7 0C7.32174 0 7.64033 0.0662416 7.93757 0.194943C8.23482 0.323644 8.50491 0.512284 8.73241 0.750092C8.95992 0.987901 9.14038 1.27022 9.2635 1.58093C9.38663 1.89164 9.45 2.22466 9.45 2.56098H13.475C13.6142 2.56098 13.7478 2.61879 13.8462 2.72171C13.9447 2.82463 14 2.96421 14 3.10976C14 3.2553 13.9447 3.39489 13.8462 3.4978C13.7478 3.60072 13.6142 3.65854 13.475 3.65854H12.551L11.732 12.5202C11.6692 13.1993 11.3666 13.8295 10.8834 14.2879C10.4001 14.7464 9.77082 15.0003 9.1182 15H4.8818C4.2293 15.0001 3.60017 14.7461 3.11706 14.2877C2.63396 13.8292 2.33151 13.1991 2.2687 12.5202L1.449 3.65854H0.525C0.385761 3.65854 0.252225 3.60072 0.153769 3.4978C0.0553123 3.39489 0 3.2553 0 3.10976C0 2.96421 0.0553123 2.82463 0.153769 2.72171C0.252225 2.61879 0.385761 2.56098 0.525 2.56098H4.55ZM5.95 6.03659C5.95 5.89104 5.89469 5.75146 5.79623 5.64854C5.69777 5.54562 5.56424 5.4878 5.425 5.4878C5.28576 5.4878 5.15223 5.54562 5.05377 5.64854C4.95531 5.75146 4.9 5.89104 4.9 6.03659V11.5244C4.9 11.6699 4.95531 11.8095 5.05377 11.9124C5.15223 12.0154 5.28576 12.0732 5.425 12.0732C5.56424 12.0732 5.69777 12.0154 5.79623 11.9124C5.89469 11.8095 5.95 11.6699 5.95 11.5244V6.03659ZM8.575 5.4878C8.43576 5.4878 8.30223 5.54562 8.20377 5.64854C8.10531 5.75146 8.05 5.89104 8.05 6.03659V11.5244C8.05 11.6699 8.10531 11.8095 8.20377 11.9124C8.30223 12.0154 8.43576 12.0732 8.575 12.0732C8.71424 12.0732 8.84777 12.0154 8.94623 11.9124C9.04469 11.8095 9.1 11.6699 9.1 11.5244V6.03659C9.1 5.89104 9.04469 5.75146 8.94623 5.64854C8.84777 5.54562 8.71424 5.4878 8.575 5.4878Z"
+                          fill="#D30A0A" />
+                      </svg> Delete </a>
+                  </li>
+                  <li><a class="dropdown-item" href="#"><svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M13.44 12.67H0.56C0.25025 12.67 0 12.9202 0 13.23V13.86C0 13.937 0.063 14 0.14 14H13.86C13.937 14 14 13.937 14 13.86V13.23C14 12.9202 13.7498 12.67 13.44 12.67ZM2.54975 11.2C2.58475 11.2 2.61975 11.1965 2.65475 11.1912L5.59825 10.675C5.63325 10.668 5.6665 10.6523 5.691 10.626L13.1093 3.20775C13.1255 3.19156 13.1383 3.17233 13.1471 3.15116C13.1559 3.12999 13.1604 3.10729 13.1604 3.08437C13.1604 3.06146 13.1559 3.03876 13.1471 3.01759C13.1383 2.99642 13.1255 2.97719 13.1093 2.961L10.2008 0.05075C10.1675 0.0175 10.1237 0 10.0765 0C10.0293 0 9.9855 0.0175 9.95225 0.05075L2.534 7.469C2.50775 7.49525 2.492 7.52675 2.485 7.56175L1.96875 10.5052C1.95173 10.599 1.95781 10.6955 1.98647 10.7864C2.01514 10.8772 2.06552 10.9597 2.13325 11.0267C2.24875 11.1388 2.394 11.2 2.54975 11.2Z"
+                          fill="#A858E1" />
+                      </svg>
+                      Edit </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </h2>
 
-        <!-- accordion body -->
+          <!-- accordion body -->
 
           <div id="recordOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
             data-bs-parent="#accordionRecord">
@@ -486,34 +499,45 @@
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingTwo">
             <!-- date & time info -->
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"  data-bs-target="#recordTwo" aria-expanded="false" aria-controls="recordTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#recordTwo" aria-expanded="false" aria-controls="recordTwo">
               <div class="dateTime_wrapp">
                 <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span><d class="date">Jan, 2021</div>
+                <div class="date_wrapp"><span class="bold-text">14</span>
+                  <d class="date">Jan, 2021
+                </div>
                 <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
               </div>
             </button>
 
             <!-- record cta -->
             <div class="record-cta">
-              <span class="dropdown">
+              <div class="dropdown">
                 <span class="dropdown-toggle dots_wrapp" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   <i class="fa-solid fa-ellipsis-vertical"></i>
-                  <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
-                    <li> <a class="dropdown-item dropdown-delete-item" href="#"><img src="assets/images/001-trash.png"
-                          alt="img" class="img-fluid" /> Delete </a>
-                    </li>
-                    <li><a class="dropdown-item" href="#"><img src="assets/images/002-edit.png" alt="img"
-                          class="img-fluid" /> Edit </a>
-                    </li>
-                  </ul>
                 </span>
-              </span>
+                <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
+                  <li> <a class="dropdown-item dropdown-delete-item" href="#"><svg width="14" height="15"
+                        viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M5.6 2.56098H8.4C8.4 2.17285 8.2525 1.80063 7.98995 1.52619C7.7274 1.25174 7.3713 1.09756 7 1.09756C6.6287 1.09756 6.2726 1.25174 6.01005 1.52619C5.7475 1.80063 5.6 2.17285 5.6 2.56098ZM4.55 2.56098C4.55 2.22466 4.61337 1.89164 4.7365 1.58093C4.85962 1.27022 5.04008 0.987901 5.26759 0.750092C5.49509 0.512284 5.76518 0.323644 6.06243 0.194943C6.35967 0.0662416 6.67826 0 7 0C7.32174 0 7.64033 0.0662416 7.93757 0.194943C8.23482 0.323644 8.50491 0.512284 8.73241 0.750092C8.95992 0.987901 9.14038 1.27022 9.2635 1.58093C9.38663 1.89164 9.45 2.22466 9.45 2.56098H13.475C13.6142 2.56098 13.7478 2.61879 13.8462 2.72171C13.9447 2.82463 14 2.96421 14 3.10976C14 3.2553 13.9447 3.39489 13.8462 3.4978C13.7478 3.60072 13.6142 3.65854 13.475 3.65854H12.551L11.732 12.5202C11.6692 13.1993 11.3666 13.8295 10.8834 14.2879C10.4001 14.7464 9.77082 15.0003 9.1182 15H4.8818C4.2293 15.0001 3.60017 14.7461 3.11706 14.2877C2.63396 13.8292 2.33151 13.1991 2.2687 12.5202L1.449 3.65854H0.525C0.385761 3.65854 0.252225 3.60072 0.153769 3.4978C0.0553123 3.39489 0 3.2553 0 3.10976C0 2.96421 0.0553123 2.82463 0.153769 2.72171C0.252225 2.61879 0.385761 2.56098 0.525 2.56098H4.55ZM5.95 6.03659C5.95 5.89104 5.89469 5.75146 5.79623 5.64854C5.69777 5.54562 5.56424 5.4878 5.425 5.4878C5.28576 5.4878 5.15223 5.54562 5.05377 5.64854C4.95531 5.75146 4.9 5.89104 4.9 6.03659V11.5244C4.9 11.6699 4.95531 11.8095 5.05377 11.9124C5.15223 12.0154 5.28576 12.0732 5.425 12.0732C5.56424 12.0732 5.69777 12.0154 5.79623 11.9124C5.89469 11.8095 5.95 11.6699 5.95 11.5244V6.03659ZM8.575 5.4878C8.43576 5.4878 8.30223 5.54562 8.20377 5.64854C8.10531 5.75146 8.05 5.89104 8.05 6.03659V11.5244C8.05 11.6699 8.10531 11.8095 8.20377 11.9124C8.30223 12.0154 8.43576 12.0732 8.575 12.0732C8.71424 12.0732 8.84777 12.0154 8.94623 11.9124C9.04469 11.8095 9.1 11.6699 9.1 11.5244V6.03659C9.1 5.89104 9.04469 5.75146 8.94623 5.64854C8.84777 5.54562 8.71424 5.4878 8.575 5.4878Z"
+                          fill="#D30A0A" />
+                      </svg> Delete </a>
+                  </li>
+                  <li><a class="dropdown-item" href="#"><svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M13.44 12.67H0.56C0.25025 12.67 0 12.9202 0 13.23V13.86C0 13.937 0.063 14 0.14 14H13.86C13.937 14 14 13.937 14 13.86V13.23C14 12.9202 13.7498 12.67 13.44 12.67ZM2.54975 11.2C2.58475 11.2 2.61975 11.1965 2.65475 11.1912L5.59825 10.675C5.63325 10.668 5.6665 10.6523 5.691 10.626L13.1093 3.20775C13.1255 3.19156 13.1383 3.17233 13.1471 3.15116C13.1559 3.12999 13.1604 3.10729 13.1604 3.08437C13.1604 3.06146 13.1559 3.03876 13.1471 3.01759C13.1383 2.99642 13.1255 2.97719 13.1093 2.961L10.2008 0.05075C10.1675 0.0175 10.1237 0 10.0765 0C10.0293 0 9.9855 0.0175 9.95225 0.05075L2.534 7.469C2.50775 7.49525 2.492 7.52675 2.485 7.56175L1.96875 10.5052C1.95173 10.599 1.95781 10.6955 1.98647 10.7864C2.01514 10.8772 2.06552 10.9597 2.13325 11.0267C2.24875 11.1388 2.394 11.2 2.54975 11.2Z"
+                          fill="#A858E1" />
+                      </svg> Edit </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </h2>
 
-        <!-- accordion body -->
+          <!-- accordion body -->
 
           <div id="recordTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
             data-bs-parent="#accordionRecord">
@@ -874,34 +898,45 @@
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingThree">
             <!-- date & time info -->
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"  data-bs-target="#recordThree" aria-expanded="false" aria-controls="recordThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#recordThree" aria-expanded="false" aria-controls="recordThree">
               <div class="dateTime_wrapp">
                 <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span><d class="date">Jan, 2021</div>
+                <div class="date_wrapp"><span class="bold-text">14</span>
+                  <d class="date">Jan, 2021
+                </div>
                 <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
               </div>
             </button>
 
             <!-- record cta -->
             <div class="record-cta">
-              <span class="dropdown">
+              <div class="dropdown">
                 <span class="dropdown-toggle dots_wrapp" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   <i class="fa-solid fa-ellipsis-vertical"></i>
-                  <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
-                    <li> <a class="dropdown-item dropdown-delete-item" href="#"><img src="assets/images/001-trash.png"
-                          alt="img" class="img-fluid" /> Delete </a>
-                    </li>
-                    <li><a class="dropdown-item" href="#"><img src="assets/images/002-edit.png" alt="img"
-                          class="img-fluid" /> Edit </a>
-                    </li>
-                  </ul>
                 </span>
-              </span>
+                <ul class="dropdown-menu  element-menu" aria-labelledby="dropdownMenuButton1">
+                  <li> <a class="dropdown-item dropdown-delete-item" href="#">
+                      <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M5.6 2.56098H8.4C8.4 2.17285 8.2525 1.80063 7.98995 1.52619C7.7274 1.25174 7.3713 1.09756 7 1.09756C6.6287 1.09756 6.2726 1.25174 6.01005 1.52619C5.7475 1.80063 5.6 2.17285 5.6 2.56098ZM4.55 2.56098C4.55 2.22466 4.61337 1.89164 4.7365 1.58093C4.85962 1.27022 5.04008 0.987901 5.26759 0.750092C5.49509 0.512284 5.76518 0.323644 6.06243 0.194943C6.35967 0.0662416 6.67826 0 7 0C7.32174 0 7.64033 0.0662416 7.93757 0.194943C8.23482 0.323644 8.50491 0.512284 8.73241 0.750092C8.95992 0.987901 9.14038 1.27022 9.2635 1.58093C9.38663 1.89164 9.45 2.22466 9.45 2.56098H13.475C13.6142 2.56098 13.7478 2.61879 13.8462 2.72171C13.9447 2.82463 14 2.96421 14 3.10976C14 3.2553 13.9447 3.39489 13.8462 3.4978C13.7478 3.60072 13.6142 3.65854 13.475 3.65854H12.551L11.732 12.5202C11.6692 13.1993 11.3666 13.8295 10.8834 14.2879C10.4001 14.7464 9.77082 15.0003 9.1182 15H4.8818C4.2293 15.0001 3.60017 14.7461 3.11706 14.2877C2.63396 13.8292 2.33151 13.1991 2.2687 12.5202L1.449 3.65854H0.525C0.385761 3.65854 0.252225 3.60072 0.153769 3.4978C0.0553123 3.39489 0 3.2553 0 3.10976C0 2.96421 0.0553123 2.82463 0.153769 2.72171C0.252225 2.61879 0.385761 2.56098 0.525 2.56098H4.55ZM5.95 6.03659C5.95 5.89104 5.89469 5.75146 5.79623 5.64854C5.69777 5.54562 5.56424 5.4878 5.425 5.4878C5.28576 5.4878 5.15223 5.54562 5.05377 5.64854C4.95531 5.75146 4.9 5.89104 4.9 6.03659V11.5244C4.9 11.6699 4.95531 11.8095 5.05377 11.9124C5.15223 12.0154 5.28576 12.0732 5.425 12.0732C5.56424 12.0732 5.69777 12.0154 5.79623 11.9124C5.89469 11.8095 5.95 11.6699 5.95 11.5244V6.03659ZM8.575 5.4878C8.43576 5.4878 8.30223 5.54562 8.20377 5.64854C8.10531 5.75146 8.05 5.89104 8.05 6.03659V11.5244C8.05 11.6699 8.10531 11.8095 8.20377 11.9124C8.30223 12.0154 8.43576 12.0732 8.575 12.0732C8.71424 12.0732 8.84777 12.0154 8.94623 11.9124C9.04469 11.8095 9.1 11.6699 9.1 11.5244V6.03659C9.1 5.89104 9.04469 5.75146 8.94623 5.64854C8.84777 5.54562 8.71424 5.4878 8.575 5.4878Z"
+                          fill="#D30A0A" />
+                      </svg> Delete </a>
+                  </li>
+                  <li><a class="dropdown-item" href="#"><svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M13.44 12.67H0.56C0.25025 12.67 0 12.9202 0 13.23V13.86C0 13.937 0.063 14 0.14 14H13.86C13.937 14 14 13.937 14 13.86V13.23C14 12.9202 13.7498 12.67 13.44 12.67ZM2.54975 11.2C2.58475 11.2 2.61975 11.1965 2.65475 11.1912L5.59825 10.675C5.63325 10.668 5.6665 10.6523 5.691 10.626L13.1093 3.20775C13.1255 3.19156 13.1383 3.17233 13.1471 3.15116C13.1559 3.12999 13.1604 3.10729 13.1604 3.08437C13.1604 3.06146 13.1559 3.03876 13.1471 3.01759C13.1383 2.99642 13.1255 2.97719 13.1093 2.961L10.2008 0.05075C10.1675 0.0175 10.1237 0 10.0765 0C10.0293 0 9.9855 0.0175 9.95225 0.05075L2.534 7.469C2.50775 7.49525 2.492 7.52675 2.485 7.56175L1.96875 10.5052C1.95173 10.599 1.95781 10.6955 1.98647 10.7864C2.01514 10.8772 2.06552 10.9597 2.13325 11.0267C2.24875 11.1388 2.394 11.2 2.54975 11.2Z"
+                          fill="#A858E1" />
+                      </svg> Edit </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </h2>
 
-        <!-- accordion body -->
+          <!-- accordion body -->
 
           <div id="recordThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
             data-bs-parent="#accordionRecord">
@@ -1258,7 +1293,7 @@
         </div>
         <!-- 3rd record end -->
 
-        
+
 
 
       </div>
