complete chart page

--- a/index.html
+++ b/index.html
@@ -96,16 +96,17 @@
         <div class="accordion-item">
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingOne">
-            <!-- date & time info -->
-            <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#recordOne"
-              aria-expanded="false" aria-controls="recordOne">
-              <div class="dateTime_wrapp">
-                <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span>
-                  <d class="date">Jan, 2021
-                </div>
-                <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
+            <div class="dateTime_wrapp">
+              <div class="dates-formate">2022-02-10 15:00:33.267582</div>
+              <div class="date_wrapp"><span class="bold-text">14</span>
+                <d class="date">Jan, 2021
               </div>
+              <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>  
+            </div>
+            <!-- date & time info -->
+            <button class="accordion-button collapse_btn  " type="button" data-bs-toggle="collapse" data-bs-target="#recordOne"
+              aria-expanded="false" aria-controls="recordOne">
+              <i class="fa-solid fa-chevron-down"></i>
             </button>
 
             <!-- record cta -->
@@ -499,15 +500,17 @@
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingTwo">
             <!-- date & time info -->
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#recordTwo" aria-expanded="false" aria-controls="recordTwo">
-              <div class="dateTime_wrapp">
-                <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span>
-                  <d class="date">Jan, 2021
-                </div>
-                <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
+            <div class="dateTime_wrapp">
+              <div class="dates-formate">2022-02-10 15:00:33.267582</div>
+              <div class="date_wrapp"><span class="bold-text">14</span>
+                <d class="date">Jan, 2021
               </div>
+              <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>  
+            </div>
+            <!-- date & time info -->
+            <button class="accordion-button collapse_btn collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#recordTwo" aria-expanded="false" aria-controls="recordTwo">
+              <i class="fa-solid fa-chevron-down"></i>
             </button>
 
             <!-- record cta -->
@@ -897,16 +900,17 @@
         <div class="accordion-item">
           <!-- accordion header -->
           <h2 class="accordion-header" id="headingThree">
-            <!-- date & time info -->
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#recordThree" aria-expanded="false" aria-controls="recordThree">
-              <div class="dateTime_wrapp">
-                <div class="dates-formate">2022-02-10 15:00:33.267582</div>
-                <div class="date_wrapp"><span class="bold-text">14</span>
-                  <d class="date">Jan, 2021
-                </div>
-                <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>
+             <!-- date & time info -->
+             <div class="dateTime_wrapp">
+              <div class="dates-formate">2022-02-10 15:00:33.267582</div>
+              <div class="date_wrapp"><span class="bold-text">14</span>
+                <d class="date">Jan, 2021
               </div>
+              <div class="time"><i class="fa-solid fa-clock"></i><span class="time-text">10:30 AM</span></div>  
+            </div>
+            <button class="accordion-button collapse_btn collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#recordThree" aria-expanded="false" aria-controls="recordThree">
+              <i class="fa-solid fa-chevron-down"></i>
             </button>
 
             <!-- record cta -->
@@ -1292,10 +1296,6 @@
 
         </div>
         <!-- 3rd record end -->
-
-
-
-
       </div>
     </div>
   </main>
@@ -1375,5 +1375,6 @@
   </script>
 
 </body>
+
 
 </html>
