--- a/analysis.html
+++ b/analysis.html
@@ -77,7 +77,7 @@
                 <option value="yoga">Yoga</option>
               </select>
             </div>
-
+           
             <!-- <select class="form-select customInputs">
               <option selected="selected">EmoFreq/Energy</option>
               <option value="1">One</option>
@@ -171,7 +171,7 @@
         <!-- analyze button -->
         <div class="row">
           <div class="col-12">
-            <a href="javascript:void(0)" class="btn btn_analyze" onclick="submitAnalyze()" id="analysisBtn">Analyze</a>
+            <a href="" class="btn btn_analyze">Analyze</a>
           </div>
         </div>
       </section>
@@ -1139,10 +1139,7 @@
             data-bs-parent="#accordionRecord">
             <div class="accordion-body">
               <!-- analysis period -->
-              <div class="commonLabel">
-                Analysis Period:
-                <span class="date">2022.07.01 - 2022.08.01</span>
-              </div>
+              <div class="commonLabel">Analysis Period: <span class="date">2022.07.01 - 2022.08.01</span></div>
               <!-- section divider -->
               <div class="borderLine"></div>
               <div class="progress_head">
@@ -1620,63 +1617,40 @@
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 </body>
+
 <script>
   // theme select2
   function selectRefresh() {
-    $('.themeDropdown').select2({
-      placeholder: "Please select",
-      allowClear: false,
-      minimumResultsForSearch: -1,
-      width: '100%',
-    });
-  }
+        $('.themeDropdown').select2({
+            placeholder: "Please select",
+            allowClear: false,
+            minimumResultsForSearch: -1,
+            width: '100%',
 
-  selectRefresh();
-
-  $(".js-select2").select2({
-    placeholder: "EmoFreq/Energy",
-    dropdownCssClass: "mutleSelect",
-    tags: true,
-  });
-  var multiSArray = [];
-  $('.js-select2').on('select2:select', function(e) {
-    var data = e.params.data;
-    multiSArray.push(data.id);
-    if (multiSArray.length > 2) {
-      var uldiv = $(this).siblings('span.select2').find('ul')
-      var count = uldiv.find('li').length;
-      uldiv.html("<li class='selectioncountmulti'>" + count + " items selected</li>")
+        });
     }
-  });
 
-  feature_list = ['EmoFreq', 'Energy', 'meditation_mins', 'gratitude', 'awareness_moments', 'mPhaseD', 'sports', 'plank', 'sudina diena']
-
-  remaining_days = 5  // if this = 0 then make section invisible, button disabled - greyed out
-  tester = 1  // if tester = 1, make all features availble, else list contains only 2 features ['EmoFreq', 'Energy']
+    selectRefresh();
 
 
-  function submitAnalyze() {
-    analysis_request_data = { "period_start": "2022-06-01", "period_end": "2022-10-01", "features": ["EmoFreq", "Energy"], "features_exc": ["meditation_mins", "gratitude", "awareness_moments", "mPhaseD", "sports", "plank", "sudina diena"], "datetime_tz": "2022-02-10 15:00:33.267582", "timezone": 3}
-    // Pop-up: "Analyis Ongoing, Results will appear shortly, please come back later"
-    // $.ajax({
-    //       url:'',
-    //       type: 'GET',
-    //       data: {'analysis_request': JSON.stringify(analysis_request_data)},
-    //       // data: {'analysis_request': analysis_request_data},
-    //       success: function(response){
-    //                 window.location = '#';
-    //                 console.log('Analysis completed')
-                    // Call pop-up: "Analysis completed"
-    //               }
-    //     });
 
-    console.log(JSON.stringify(analysis_request_data))
-    console.log(analysis_request_data)
+    $(".js-select2").select2({
+        placeholder: "EmoFreq/Energy",
+        dropdownCssClass: "mutleSelect",
+        tags: true,
 
-    // Disable Button after it's pressed
-    var element = document.getElementById('analysisBtn');
-    element.setAttribute("disabled", "disabled");
-    console.log('disabled button')
-  }
+    });
+    var multiSArray = [];
+    $('.js-select2').on('select2:select', function (e) {
+        var data = e.params.data;
+        multiSArray.push(data.id);
+        if (multiSArray.length > 2) {
+            var uldiv = $(this).siblings('span.select2').find('ul')
+            var count = uldiv.find('li').length;
+            uldiv.html("<li class='selectioncountmulti'>" + count + " items selected</li>")
+        }
+    });
 </script>
+
+
 </html>
