--- a/analysis.html
+++ b/analysis.html
@@ -77,13 +77,6 @@
                 <option value="6">Barcelona</option>
               </select>
             </div>
-           
-            <!-- <select class="form-select customInputs">
-              <option selected="selected">EmoFreq/Energy</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select> -->
           </div>
 
         </div>
@@ -117,7 +110,7 @@
             <p class="subLabel">Untill next analysis</p>
           </div>
           <div class="col-7">
-            <input type="text" class="form-control" placeholder="1 Week">
+            <input type="text" class="form-control" disabled placeholder="1 Week">
           </div>
         </div>
 
@@ -235,23 +228,11 @@
             data-bs-parent="#accordionRecord">
             <div class="accordion-body">
               <!-- analysis period -->
-              <div class="commonLabel">
-                Analysis Period:
-                <span class="date">2022.07.01 - 2022.08.01</span>
-              </div>
-              <!-- section divider -->
+              <div class="commonLabel">Analysis Period:<span class="date">2022.07.01 - 2022.08.01</span></div>
               <div class="borderLine"></div>
-              <div class="progress_head">
-                <div class="commonLabel">
-                  Emotional Frequency:
-                  <i title="text text text" class="fa-solid fa-info-circle"></i>
-                </div>
-                <div class="commonLabel averageLabel">
-                  Average :
-                  <div class="average_value">
-                    <p>450</p>
-                    <i class="fas fa-caret-up"></i>
-                  </div>
+                <div class="progress_head">
+                  <div class="commonLabel">Emotional Frequency:<i title="text text text" class="fa-solid fa-info-circle"></i></div>
+                  <div class="commonLabel averageLabel">Average : <div class="average_value"><p>450</p><i class="fas fa-caret-up"></i> </div>
                 </div>
               </div>
               <!-- progress section  start -->
@@ -260,7 +241,6 @@
                   <!-- positive trends -->
                   <div class="col-6 border_cus_right">
                     <h5 class="trend_title">POSITIVE</h5>
-
                     <!-- positive item 1 -->
                     <div class="item-same my-1">
                       <div class="row g-0">
