--- a/analysis.html
+++ b/analysis.html
@@ -86,6 +86,7 @@
             <label class="commonLabel" for="">Exclude Feature(s)<i title="text text text" class="fa-solid fa-info-circle"></i>
             </label>
           </div>
+          <!-- <input type="text" name="dates"> -->
           <div class="col-7">
             <div class="mutleSelect">
               <select class="js-select2 form-select customInputs" multiple="multiple" id="excludeFeatures">
@@ -164,7 +165,7 @@
         <!-- analyze button -->
         <div class="row">
           <div class="col-12">
-            <a href="" class="btn btn_analyze">Analyze</a>
+            <a href="javascript:void(0)" class="btn btn_analyze" onclick="submitAnalyze()" id="analysisBtn">Analyze</a>
           </div>
         </div>
       </section>
@@ -1584,6 +1585,7 @@
   <!-- fixed end-->
   <!-- JS, Popper.js, and jQuery -->
   <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
@@ -1599,9 +1601,15 @@
 </body>
 
 <script>
+  // $('input[name="dates"]').daterangepicker();
+  var data = {};
+  var timezone = (new Date().getTimezoneOffset()) / 60;
+  data['timezone'] = timezone;
+  data['datetime_tz'] = moment(new Date()).format('YYYY-MM-DD hh:mm:ss');
   // theme select2
   var features = ['emoFreq', 'energy', 'having_fun', 'sports', 'alcohol', 'yoga'];
   var features_ex = ['emoFreq', 'energy', 'having_fun', 'sports', 'alcohol', 'yoga'];
+
 
   function selectRefresh() {
         $('.themeDropdown').select2({
@@ -1653,9 +1661,27 @@
     });
   });
 
+  let dateCard = document.querySelectorAll('.accordion')
+  dateCard.forEach(r => {
+    var getDate = r.querySelector('.dates-formate')
+    if (!getDate) return;
+    var newDate = new Date(getDate.textContent.replace(/ /g, "T"))
+    r.querySelector('.bold-text').textContent = newDate.getDate()
+    const month = ["Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sep", "Oct", "Nov", "Dec"];
+    r.querySelector('.date').textContent = month[newDate.getMonth()] + ', ' + newDate.getFullYear()
+    r.querySelector('.time-text').textContent = newDate.toLocaleString('en-US', {
+      hour: 'numeric',
+      minute: 'numeric',
+      hour12: true
+    })
+  })
+
   function submitAnalyze() {
+    data['features'] = $('#selectFeatures').val();
+    data['features_exc'] = $('#excludeFeatures').val();
+
     var analysis_request_json = { "period_start": "2022-02-01", "period_end": "2022-10-01", "features": ["EmoFreq", "Energy"], "features_exc": ["meditation_mins", "gratitude", "awareness_moments", "mPhaseD", "sports", "plank", "sudina diena"], "datetime_tz": "2022-02-10 15:00:33.267582", "timezone": 3}
-    console.log(analysis_request_json)
+    console.log(data)
   }
 </script>
 </html>
