--- a/analysis.html
+++ b/analysis.html
@@ -77,7 +77,7 @@
           <!-- feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Select Feature(s)<i title="text text text" class="fa-solid fa-info-circle"></i>
+              <label class="commonLabel" for="">Select Feature(s)<i title="text text text" class="fa-solid fa-info-circle " data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -96,7 +96,7 @@
           <!-- exclude feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Exclude Feature(s)<i title="text text text" class="fa-solid fa-info-circle"></i>
+              <label class="commonLabel" for="">Exclude Feature(s)<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -116,7 +116,7 @@
             <div class="row mb-3" id="rDays_row">
               <div class="col-5 my-auto">
                 <label class="commonLabel" for="">Remaining days
-                <i title="text text text" class="fa-solid fa-info-circle"></i>
+                <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                 </label>
                 <p class="subLabel">Untill next analysis</p>
               </div>
@@ -129,7 +129,7 @@
           <div class="row mb-3" id="rAnalysis_row">
             <div class="col-5 my-auto">
               <label class="commonLabel" for="">Analysis Left
-              <i title="text text text" class="fa-solid fa-info-circle"></i>
+              <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
               <!-- <p class="subLabel">Untill next analysis</p> -->
             </div>
@@ -256,7 +256,7 @@
                 <div class="commonLabel">Analysis Period:<span class="date">2022.07.01 - 2022.08.01</span></div>
                 <div class="borderLine"></div>
                 <div class="progress_head">
-                  <div class="commonLabel">Emotional Frequency:<i title="text text text" class="fa-solid fa-info-circle"></i></div>
+                  <div class="commonLabel">Emotional Frequency:<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i></div>
                   <div class="commonLabel averageLabel">
                     Average : 
                     <div class="average_value">
@@ -433,7 +433,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
@@ -617,13 +617,7 @@
                   <section class="rating_section">
                     <h5>How accurate results?</h5>
                     <p>Select 1-5 Starts (collect feedback form user)</p>
-                    <div class="rating_stars">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
+                    <div class="rating"></div>
                   </section>
                   <!-- section divider -->
                   <div class="borderLine"></div>
@@ -702,7 +696,7 @@
                 <div class="progress_head">
                   <div class="commonLabel">
                     Emotional Frequency:
-                    <i title="text text text" class="fa-solid fa-info-circle"></i>
+                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </div>
                   <div class="commonLabel averageLabel">
                     Average :
@@ -880,7 +874,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
@@ -1064,13 +1058,7 @@
                   <section class="rating_section">
                     <h5>How accurate results?</h5>
                     <p>Select 1-5 Starts (collect feedback form user)</p>
-                    <div class="rating_stars">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
+                    <div class="rating"></div>
                   </section>
                   <!-- section divider -->
                   <div class="borderLine"></div>
@@ -1144,7 +1132,7 @@
                 <div class="progress_head">
                   <div class="commonLabel">
                     Emotional Frequency:
-                    <i title="text text text" class="fa-solid fa-info-circle"></i>
+                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </div>
                   <div class="commonLabel averageLabel">
                     Average :
@@ -1322,7 +1310,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
@@ -1506,13 +1494,7 @@
                   <section class="rating_section">
                     <h5>How accurate results?</h5>
                     <p>Select 1-5 Starts (collect feedback form user)</p>
-                    <div class="rating_stars">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
+                    <div class="rating"></div>
                   </section>
                   <!-- section divider -->
                   <div class="borderLine"></div>
@@ -1600,6 +1582,7 @@
   <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/1.2.1/chartjs-plugin-zoom.min.js"></script>
   <script src="./assets/js/chart_dummy.js"></script>
+  <script src="./assets/js/jquery.star-rating.js"></script>
   <script src="./assets/js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
@@ -1667,6 +1650,7 @@
         placeholder: "EmoFreq/Energy",
         dropdownCssClass: "mutleSelect",
         tags: true,
+        closeOnSelect: false
   
     });
     var multiSArray = [];
